Sun Dec 09 03:34:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am, tasklist_icon.[ch], foobar-widget.c, main.c, menu.c,
	  xstuff.c: remove the gwmh and gstc hack stuff and remove them from
	  build and also remove the tasklist_icon.[ch] as well.  We use
	  libwnck now:)

Sun Dec 09 03:25:13 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, menu-util.[ch]: initial crack at porting the
	  tasklist thing to libwnck, reenable the clock menu thing, use main
	  menu stuff for the "applications" menu so that we can get a KDE
	  and/or distribution submenu and remove some dead code

	* menu.[ch], foobar-widget.c, menu-fentry.h: whack the title flags
	  from things.  Menu titles are long dead

	* applet.c: also launch nautilus for edit menus

Sat Dec 08 23:16:39 2001  George Lebl <jirka@5z.com>

	* menu.[ch], menu-fentry.h, menu-util.c, menu-properties.c,
	  session.c, main.c, gnome-run.c:  Remove favourites menu.  It is
	  useless with the current push towards editable menus.  Also instead
	  of running gedit, run nautilus on programs:/ as a menu editor.

	* panel-widget.c: fix warning.

	* applet.c, foobar-widget.c: use gtk image menu items instead of
	  normal items where appropriate.

Sat Dec 08 11:28:37 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, launcher.c, menu.c, swallow.c:  Use the new desktop
	  item launch api.

2001-12-07  Alex Larsson  <alexl@redhat.com>

	* button-widget.[ch]:
	Draw buttons using gdk-pixbuf instead of libart, should
	be faster and more correct.

	* panel-widget.c (make_background): Take a rowstride arg.
	(queue_resize_on_all_applets): New function
	(send_draw_to_all_applets): Use pixbuf
	(panel_widget_change_params): Queue resize on applets.

2001-12-08  Glynn Foster  <glynn.foster@sun.com>

	* gnome-run.c, gnome-run.h, menu.c,
	panel.c, session.c:  Whack gnome-run button applet thing which
	serves very little purpose.

2001-12-08  Glynn Foster  <glynn.foster@sun.com>
